[gd_scene load_steps=13 format=2]

[ext_resource path="res://RaptorRender/GUI/Themes/grey.tres" type="Theme" id=1]
[ext_resource path="res://RaptorRender/GUI/SortableTable/SortableTable.tscn" type="PackedScene" id=2]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/ClientInfoPanel/Client_Info_Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/Job_Info_Panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Clients.tscn" type="PackedScene" id=5]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Jobs.tscn" type="PackedScene" id=6]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Chunks.tscn" type="PackedScene" id=7]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Log.tscn" type="PackedScene" id=8]
[ext_resource path="res://RaptorRender/GUI/AutoScalingPopup/AutoScalingPopupBase.tscn" type="PackedScene" id=9]
[ext_resource path="res://RaptorRender/GUI/NotificationSystem/NotificationSystem.tscn" type="PackedScene" id=10]
[ext_resource path="res://RaptorRender/GUI/ClientsTabContainer.gd" type="Script" id=11]
[ext_resource path="res://RaptorRender/GUI/ManagementGUI.gd" type="Script" id=12]


[node name="GUI" type="Node"]
script = ExtResource( 12 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 22.0
custom_constants/separation = 10

[node name="CreateJobButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 22.0
text = "create job"

[node name="PoolManagerButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 185.0
margin_bottom = 22.0
text = "pool manager"

[node name="SwitchLanguageButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 308.0
margin_bottom = 22.0
text = "switch language"

[node name="ColorizeRowsButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 484.0
margin_bottom = 22.0
text = "colorize erroneous rows"

[node name="ServerButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 546.0
margin_bottom = 22.0
text = "Server"

[node name="ClientButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 556.0
margin_right = 605.0
margin_bottom = 22.0
text = "Client"

[node name="MainHSplitContainer" type="HSplitContainer" parent="Control/VBoxContainer"]
margin_top = 26.0
margin_right = 1280.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVSplitContainer" type="VSplitContainer" parent="Control/VBoxContainer/MainHSplitContainer"]
margin_right = 910.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainerJobs" type="TabContainer" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer"]
margin_right = 910.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Jobs" type="Tabs" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerJobs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Jobs_SortableTable" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerJobs/Jobs" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
table_id = "jobs"

[node name="TabContainerClients" type="TabContainer" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer"]
margin_top = 291.0
margin_right = 910.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 11 )

[node name="All Clients" type="Tabs" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerClients"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Clients_SortableTable" parent="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerClients/All Clients" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
table_id = "clients"

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/MainHSplitContainer"]
margin_left = 918.0
margin_right = 1280.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Panel" type="Panel" parent="Control/VBoxContainer/MainHSplitContainer/PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 570.0

[node name="ClientInfoPanel" parent="Control/VBoxContainer/MainHSplitContainer/PanelContainer/Panel" instance=ExtResource( 3 )]
visible = false
margin_right = 0.0

[node name="JobInfoPanel" parent="Control/VBoxContainer/MainHSplitContainer/PanelContainer/Panel" instance=ExtResource( 4 )]
visible = false
margin_right = 0.0

[node name="ContextMenu_Clients" parent="Control" instance=ExtResource( 5 )]

[node name="ContextMenu_Jobs" parent="Control" instance=ExtResource( 6 )]

[node name="ContextMenu_Chunks" parent="Control" instance=ExtResource( 7 )]
context_menu_id = "chunks"

[node name="ContextMenuBase" parent="Control" instance=ExtResource( 8 )]

[node name="SubmitJobPopup" parent="Control" instance=ExtResource( 9 )]
visible = false
popup_id = "submit_job"
title = "POPUP_SUBMIT_JOB_1"
ok_button_string = "POPUP_SUBMIT_JOB_1"
margin_left_percent = 25.0
margin_right_percent = 25.0
margin_top_percent = 10.0
margin_bottom_percent = 10.0

[node name="PoolManagerPopup" parent="Control" instance=ExtResource( 9 )]
visible = false
popup_id = "poolmanager"
title = "POPUP_POOLMANAGER_1"
margin_top_percent = 10.0
margin_bottom_percent = 10.0

[node name="NotificationSystem" parent="." instance=ExtResource( 10 )]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/CreateJobButton" to="." method="_on_CreateJobButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/PoolManagerButton" to="." method="_on_PoolManagerButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/SwitchLanguageButton" to="." method="_on_SwitchLanguageButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/ColorizeRowsButton" to="." method="_on_ColorizeRowsButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="tab_changed" from="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerClients" to="Control/VBoxContainer/MainHSplitContainer/MainVSplitContainer/TabContainerClients" method="_on_TabContainerClients_tab_changed"]
